Compiler replay tests are failing after JDK-8346990

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P2
    • 25
    • Affects Version/s: 25
    • Component/s: hotspot
    • 25
    • b06
    • Verified

      stdout: CompileCommand: dontinline compiler/ciReplay/Test.dontInline bool dontinline = true
      Error while parsing line 10 at position 240: data

      Failed on data

      JDK-8346990 appears to have changed the format of data written out in the dump, such that reading it back is failing:

      @@ -785,7 +785,7 @@ void ciMethodData::dump_replay_data(outputStream* out) {
          // We could use INTPTR_FORMAT here but that's zero justified
          // which makes comparing it with the SA version of this output
          // harder. data()'s element type is intptr_t.
      - out->print(" " INTX_FORMAT_X, data()[i]);
      + out->print(" %#zx", data()[i]);
        }

      The problem is in the formatting of zero. The original format specifier will produce 0x0 but the new one just a plain 0.

            Assignee:
            David Holmes
            Reporter:
            David Holmes
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: