8347627: Compiler replay tests are failing after JDK-8346990

Reviewed-by: coleenp